RWBY RoC Minor update v2.01 (#5111)
* Update to V2- Added numerous roll and display options

change log
¤ Modified all roll values
¤ Added Empower feature in Semblance section
¤ Added optional Additional, Unarmed and Alternate Form attack and damage rolls in Weapon section footer
¤ Added Info boxes attached to various parts of the sheet containing rule details
¤ Added Version Notes section in the header containing update and how-to-use notes
¤ Added Sheet Options section in the footer, containing modifiers and roll options
¤ Added option to hide Modification and Phial description fields, reduced format includes a Quick description field for mods and roll buttons for phials
¤ Changed Weapon Variants to Weapon Styles
¤ Added default placeholders to drop-down menus for Weapon styles and phial attributes
¤ Minor cosmetic changes (sans-serif font in text areas, etc)
¤ (Chrome only) Added webkit buttons (up/down arrows) in RoC Dice field for one-click RoC modification

* Update RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.css

Changed image link to github repo

Co-Authored-By: Kasenai3 <Sengannomahoutsukai@gmail.com>

* changed logo link to github repo

* Update preview.jpg

* Minor update v2.01

Fixed semblance and phial rolls, added character level field (and udpated changelog)

--- a/RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.html
+++ b/RWBY_RoC-Unofficial_Tabletop_RPG/RWBY-UnofficialTabletopRPG.html
@@ -7,14 +7,20 @@
     <div class='sheet-col' style="algin: left; display: inline;">
        <input type="text" style=" background: #FFF; width: 200px; border-radius: 2px; font-weight: bold; Font-family: monospace, sans-serif; font-size: 1.1em ;" name="attr_name"  />
     </div>
+    <div class='sheet-col-cha' style=" display: inline; position: relative; top: 5px;">
+            Level :
+    </div> 
+    <div class='sheet-col' style="algin: left; display: inline;">
+       <input type="text" style=" background: #FFF; width: 25px; border-radius: 2px; font-weight: bold; Font-family: monospace, sans-serif; font-size: 1.1em ;" name="attr_level"  />
+    </div>
     <div class='sheet-col' style="text-align: left;">
-        <img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/RWBY_RoC-Unofficial_Tabletop_RPG/rwby.png" style="position: relative; left: 460px; bottom: 2px;" alt="RWBY Unofficial Tabletop RPG" width="80%" height="80%">
+        <img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/RWBY_RoC-Unofficial_Tabletop_RPG/rwby.png" style="position: relative; left: 380px; bottom: 2px;" alt="RWBY Unofficial Tabletop RPG" width="80%" height="80%">
     </div>
 </div>
 <div style=" display: inline; font-size: 0.6em; opacity:0.8;"><span style="font-family: Pictos;"> </span> Version notes </div>
                                 <input type="checkbox" class="arrow4" style="position: relative; top: 0px; left: -15px;" name="attr_versionnotes" checked="true" /><span style="position: relative; top: 2px; left: -5px;"></span>
                                 <div class="sheet-version">
-                                    <div class='sheet-4colrow1'style=" padding: 3px; padding-left: 1px; padding-right: 1px; height: 200px; width: 846px; margin-left: -3px; margin-bottom: 10px;" align="left">
+                                    <div class='sheet-4colrow1'style=" padding: 3px; padding-left: 1px; padding-right: 1px; height: 203px; width: 846px; margin-left: -3px; margin-bottom: 10px;" align="left">
                                         <table style="display: inline; margin-left: 4px; padding-right: 0px; margin-right: 0px;">
                                             <tr>
                                                 <td  style="font-size: 0.7em;color: #C14242;">
@@ -27,7 +33,7 @@
                                                     Clarifications on Attribute Checkboxes:</strong>
                                                 </td>
                                                 <td align="left" style="font-size: 0.9em;"><strong>
-                                                    Change log (02.2019):</strong>
+                                                    Change log (05.2019):</strong>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -47,28 +53,37 @@
                                                 </td>
                                                 <td style="font-size: 0.8em;">
                                                     <div style="overflow: auto; height: 170px; width: 415px;">
-                                                   ¤ Updated health, aura, capacity and other stat/roll calculations to match ver.6.29.20.17
-                                                   <br>¤ Added Empower feature in Semblance section
-                                                   <br>¤ Added optional Additional, Unarmed and Alternate Form attack and damage rolls in 
-                                                   Weapon section footer (click on the arrows to expand)
-                                                   <br>¤ Added Info boxes attached to various parts of the sheet containing rule details 
-                                                   <br>¤ Added Sheet Options section in the footer (click on the arrow to expand)
-                                                   <br>¤ Added permanent modifier fields to all Secondary Attributes, Defense, Attack, 
-                                                   Damage and Semblance rolls in Sheet Options section
-                                                   <br>¤ Added toggles to replace the Attribute selection checkbox system with dialog boxes 
-                                                   for Skill and Semblance Rolls in Sheet Options section
-                                                   <br>¤ Added toggles to enable dialog boxes asking for modifier and advantage/disadvantage 
-                                                   for all rolls in Sheet Options section
-                                                   <br>¤ Added option to hide Modification and Phial description fields (click on the
-                                                   arrow in front of name/color row to reduce/expand), reduced format includes a Quick 
-                                                   description field for mods and roll buttons for phials
-                                                   <br>¤ Added Version Notes section in the header containing update and how-to-use notes
-                                                   (click on the arrow to expand/reduce)
-                                                   <br>¤ Added default placeholders to drop-down menus for Weapon styles(formerly weapon variants)
-                                                   and phial attributes
-                                                   <br>¤ Minor cosmetic changes (sans-serif font in text areas, etc)
-                                                   <br>¤ (Chrome only) Added webkit buttons (up/down arrows) in RoC Dice field for one-click RoC modification 
-                                                   </div>
+						                                        <strong>V2.01 (05.19):</strong>
+                                                    <br>Fixes :
+                                                    <br>¤ Corrected chat messages for level 2 and 3 phial rolls
+                                                    <br>¤ Fixed Semblance rolls
+                                                    <br>
+                                                    <br>Added features :
+                                                    <br>¤ Added a character Level field next to character name field
+                                                    <br>
+                                                    <br><strong>V2 Update (02.19) :</strong>
+                                                    <br>¤ Updated health, aura, capacity and other stat/roll calculations to match ver.6.29.20.17
+                                                    <br>¤ Added Empower feature in Semblance section
+                                                    <br>¤ Added optional Additional, Unarmed and Alternate Form attack and damage rolls in 
+                                                    Weapon section footer (click on the arrows to expand)
+                                                    <br>¤ Added Info boxes attached to various parts of the sheet containing rule details 
+                                                    <br>¤ Added Sheet Options section in the footer (click on the arrow to expand)
+                                                    <br>¤ Added permanent modifier fields to all Secondary Attributes, Defense, Attack, 
+                                                    Damage and Semblance rolls in Sheet Options section
+                                                    <br>¤ Added toggles to replace the Attribute selection checkbox system with dialog boxes 
+                                                    for Skill and Semblance Rolls in Sheet Options section
+                                                    <br>¤ Added toggles to enable dialog boxes asking for modifier and advantage/disadvantage 
+                                                    for all rolls in Sheet Options section
+                                                    <br>¤ Added option to hide Modification and Phial description fields (click on the
+                                                    arrow in front of name/color row to reduce/expand), reduced format includes a Quick 
+                                                    description field for mods and roll buttons for phials
+                                                    <br>¤ Added Version Notes section in the header containing update and how-to-use notes
+                                                    (click on the arrow to expand/reduce)
+                                                    <br>¤ Added default placeholders to drop-down menus for Weapon styles(formerly weapon variants)
+                                                    and phial attributes
+                                                    <br>¤ Minor cosmetic changes (sans-serif font in text areas, etc)
+                                                    <br>¤ (Chrome only) Added webkit buttons (up/down arrows) in RoC Dice field for one-click RoC modification 
+                                                    </div>
                                                 </td>
                                             </tr>
                                         </table>
@@ -868,7 +883,7 @@
                         </span>
                         <div class='sheet-col' style="width: 35px; padding: 1px; position:relative;left:324px;bottom:30px;">
                             <div class="sheet-popup-semblance">
-                                <button type='roll' value="/me use their semblance @{ad-disad-query}+(@{RoC}[Roc]+[[@{altempsemblance}]][Emp])d10cs11cf0)+@{willpower}[Wil]+@{altsemblance}+@{semmod}+@{modquery}]]" name="roll_semblance"/>
+                                <button type='roll' value="/me uses their semblance @{semblance-name} @{ad-disad-query}+(@{RoC}+@{altempsemblance})d10cs11cf0)+@{willpower}[Wil]+@{altsemblance}+@{semmod}+@{modquery}]]" name="roll_semblance"/>
                             </div>
                             <span class="sheet-tooltip">
                                 Check the secondary attribute and roll.
@@ -957,7 +972,7 @@
                                         Level 2 roll:
                                     </div>
                                     <div  class="sheet-phialquickroll" style="display: inline;">
-                                            <button type='roll' value="/me uses a level 1 Phial @{ad-disad-query}+(@{RoC})d10cs11cf0[RoC])+@{discipline}[Dis]+@{phi}+@{modquery}]] and consumes 1 capacity and 1 action" style="display: inline;" name="roll_phi5"/>
+                                            <button type='roll' value="/me uses a level 2 Phial @{ad-disad-query}+(@{RoC})d10cs11cf0[RoC])+@{discipline}[Dis]+@{phi}+@{modquery}]] and consumes 2 capacity and 2 actions" style="display: inline;" name="roll_phi5"/>
                                     </div>
                                     <span  class="sheet-tooltip2">
                                         <span class="tooltipphial" name="attr_phi2col"></span>
@@ -966,7 +981,7 @@
                                         Level 3 roll:
                                     </div>
                                     <div  class="sheet-phialquickroll" style="display: inline;">
-                                            <button type='roll' value="/me uses a level 1 Phial @{ad-disad-query}+(@{RoC})d10cs11cf0[RoC])+@{discipline}[Dis]+@{phi}+@{modquery}]] and consumes 1 capacity and 1 action" style="display: inline;" name="roll_phi6"/>
+                                            <button type='roll' value="/me uses a level 3 Phial @{ad-disad-query}+(@{RoC})d10cs11cf0[RoC])+@{discipline}[Dis]+@{phi}+@{modquery}]] and consumes 3 capacity and 3 actions" style="display: inline;" name="roll_phi6"/>
                                     </div>
                                     <span  class="sheet-tooltip3">
                                         <span class="tooltipphial" name="attr_phi3col"></span>
