--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.html
@@ -3,7 +3,7 @@
     <input class="sheet-HideConfig" type="checkbox" checked name="attr_is_config"/><span class="sheet-is-config"><span style='font-family:"Pictos";'>y</span></span>
     <div class="sheet-config" style="text-align:left">
         <div style="text-align:left"><b>Era Selection</b></div>
-	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="7"><span style="display:none">Invictuss</span>
+	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="7"><span style="display:none">Invictus</span>
 	    <input type="checkbox" style="display:none" lass="sheet-showskills" name="attr_showskills" value="1"><span style="display:none">Dark Ages</span>
 	    <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="5"><span style="display:none">Old West</span>
 	    <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="2" checked="checked"><span style="display:none">1920's</span>
@@ -34,11 +34,18 @@
 	    <div>
 	        <input type="checkbox" class="sheet-toggledr" name="attr_toggledr" value="1">Common Dice Rolls
 	        <input type="checkbox" class="sheet-togglearmor" name="attr_togglearmor" value="1">Armor
-	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">Companions & Mounts
+	    </div>
+	    <div>
+	        <input type="checkbox" class="sheet-togglecompanions" name="attr_togglecompanions" value="1">NPCs(Companions,Mounts,etc)
+	        <input type="checkbox" class="sheet-togglevehicles" name="attr_togglevehicles" value="1">Vehicles
+	    </div>
+	    <div>
+	        <input type="checkbox" class="sheet-hide" name="attr_sheet-hide">Hide Sheet
 	    </div>
     </div>
 </div>
 
+<input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
 <!------------------------- Char Info and Characteristics ------------------------->
 <div class='sheet-2colrow'>
     <div class='sheet-col'>
@@ -3733,7 +3740,9 @@
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
     <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
+    <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <h4 class="section-head" data-i18n="combat-u">Combat</h4>
+    <input type="checkbox" style="display:none" class="sheet-hide" name="attr_sheet-hide">
     <div class="section">
 
 <!------------------------- Invictus Combat ------------------------->
@@ -4688,7 +4697,7 @@
     </div>
 </div>
 
-<!------------------------- Companions ------------------------->
+<!------------------------- Companions (NPCs)------------------------->
 <div class='sheet-colrow'>
     <input type="checkbox" class="sheet-togglecompanions" style="display:none" name="attr_togglecompanions" value="1">
     <div class="sheet-companions">
@@ -4700,19 +4709,19 @@
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
         <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
-    <h4 class="section-head" data-i18n="companions&mounts-u">Companions & Mounts</h4>
+    <h4 class="section-head" data-i18n="companions&mounts-u">NPCs</h4>
 		<div class="sheet-section">
 		    <fieldset class="repeating_minion">
 		        <div class="sheet-row">
 		            <div>
                         <input type="text" name="attr_minion_name" style="width:35%;font-weight:bold;text-align:center" data-i18n-placeholder="name-u" placeholder="Name"/>
-                        <input class="dice-roll-input" style="width:8%;text-align:center" type="text" name="attr_minion_san_roll" data-i18n-placeholder="san-u" placeholder="SAN"/>
+                        <input class="narrow-input" style="width:8%;text-align:center" type="text" name="attr_minion_san_roll" data-i18n-placeholder="san-u" placeholder="SAN"/>
 		                <span><button class='smallbutton-roll' type='roll' value='&{template:coc-1} {{name=@{minion_name} Rolling SAN}} {{success=[[@{minion_san_roll}]]}} {{hard=[[floor(@{minion_san_roll}/2)]]}} {{extreme=[[floor(@{minion_san_roll}/5)]]}} {{roll1=[[1d100]]}}' name='roll_minion_san_roll_check' /></span>
 		            </div>
 		        </div>
 		        <div class="sheet-col" style="width:22%">
 		            <div class="sheet-row">
-		                <textarea name="attr_minion_stats_info" style="width:95%;height:82px;font-size:90%"></textarea>
+		                <textarea name="attr_minion_stats_info" style="width:95%;height:72px;font-size:90%"></textarea>
 			        </div>
 	            </div>
 	            <div class="sheet-col" style="width:12%;text-align:left">
@@ -4847,6 +4856,64 @@
                         <span><button class='smallbutton-roll' type='roll' value='&{template:coc-minionattack} {{name=@{minion_name} Attacking with @{minionweapon3}}} {{success=[[@{minionskill8}]]}} {{hard=[[floor(@{minionskill8}/2)]]}} {{extreme=[[floor(@{minionskill8}/5)]]}} {{roll1=[[1d100]]}} {{damage=[[@{miniondamage3}]]}}' name='roll_miniondamage3' /></span>
 		            </div>
 		        </div>
+	            <hr>
+		    </fieldset>       
+		</div>
+		</div>
+</div>
+
+<!------------------------- Vehicles------------------------->
+<div class='sheet-colrow'>
+    <input type="checkbox" class="sheet-togglevehicles" style="display:none" name="attr_togglevehicles" value="1">
+    <div class="sheet-vehicles">
+    <input type="checkbox" style="display:none" class="sheet-showpulp" name="attr_showpulp" value="1">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="7">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="1">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="5">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="2" checked="checked">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="3">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="6">
+        <input type="checkbox" style="display:none" class="sheet-showskills" name="attr_showskills" value="4">
+    <h4 class="section-head" data-i18n="vehicles-u">Vehicles</h4>
+		<div class="sheet-section">
+		    <fieldset class="repeating_vehicle">
+		        <div class="sheet-row">
+		            <div>
+                        <input type="text" name="attr_vehicle_name" style="width:61%;font-weight:bold;text-align:center" data-i18n-placeholder="name-u" placeholder="Name"/>
+		            </div>
+		        </div>
+		        <div class="sheet-col" style="width:22%">
+		            <div class="sheet-row">
+		                <textarea name="attr_vehicle_stats_info" style="width:95%;height:55px;font-size:90%"></textarea>
+			        </div>
+	            </div>
+	            <div class="sheet-col" style="width:16%;text-align:left">
+	                    <div>
+                            <span style="font-size:80%" data-i18n="build-u"><b>Build</b></span>
+                            <input class="narrow-input" style="width:33%" type="text" name="attr_vehiclebuild" />
+                            <span>/</span>
+                            <input class="narrow-input" style="width:33%" type="text" name="attr_vehiclebuildmax"/>
+			            </div>
+			            <div>
+                            <span style="font-size:80%" data-i18n="armor-z"><b>Armor</b></span>
+                            <input class="narrow-input" style="width:37%" type="text" name="attr_vehiclearmor" />
+                            <span><button class='smallbutton-roll' type='roll' value='&{template:coc-miniondef} {{name=@{vehicle_name} Armor}} {{defence=[[@{vehiclearmor}]]}}' name='roll_vehiclearmor' /></span>
+			            </div>
+			            <div>
+                            <span style="font-size:80%" data-i18n="MOV-u"><b>MOV</b></span>
+                            <input class="narrow-input" style="width:41%" type="text" name="attr_vehiclemove" />
+			            </div>
+	            </div>
+	            <div class="sheet-col" style="width:22%">
+		            <div class="sheet-row">
+		                <textarea name="attr_vehicle_stats_info_2" style="width:95%;height:55px;font-size:90%"></textarea>
+			        </div>
+	            </div>
+	            <div class="sheet-col" style="width:22%">
+		            <div class="sheet-row">
+		                <textarea name="attr_vehicle_stats_info_3" style="width:95%;height:55px;font-size:90%"></textarea>
+			        </div>
+	            </div>
 	            <hr>
 		    </fieldset>       
 		</div>
