Tidying up fumble and crit output message

--- a/Splittermond/Sheet.html
+++ b/Splittermond/Sheet.html
@@ -2165,16 +2165,6 @@
                 {{/rollGreater() Probe s27}}
             </b></td>
         </tr>
-        {{#rollWasCrit() Probe}}
-            <tr>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td style="font-size:11px; text-align:center">
-                    10 gew&uuml;rfelt! Auf Triumph &uuml;berpr&uuml;fen!
-                </td>
-            </tr>
-        {{/rollWasCrit() Probe}}
         {{#rollWasFumble() Probe}}
             <tr>
                 <td>&nbsp;</td>
@@ -2185,6 +2175,18 @@
                 </td>
             </tr>
         {{/rollWasFumble() Probe}}
+        {{#^rollWasFumble() Probe}}
+            {{#rollWasCrit() Probe}}
+	            <tr>
+	                <td>&nbsp;</td>
+	            </tr>
+	            <tr>
+	                <td style="font-size:11px; text-align:center">
+	                    10 gew&uuml;rfelt! Auf Triumph &uuml;berpr&uuml;fen!
+	                </td>
+	            </tr>
+        	{{/rollWasCrit() Probe}}  
+        {{/^rollWasFumble() Probe}}
     </table>
 </rolltemplate>
 
