--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -121,16 +121,23 @@
         <div class="box character-appearance">
             <div class="appearance-grid">
                 <div class="appearance-box1 header"><h1 data-i18n="appearance-u">APPEARANCE</h1></div>
+                <input class="display" name="attr_appearence_reveal" type="hidden" value="face,body,clothing," />
                 <div class="appearance-box2"><span class="label" data-i18n="face">Face</span></div>
                 <div class="appearance-box3">
+                    <button class="toggles" name="act_settings_face" type="action">y</button>
+                    <span name="attr_face"></span>
                     <textarea class="input-textarea" name="attr_face" title="@{face}"></textarea>
                 </div>
                 <div class="appearance-box4"><span class="label" data-i18n="body">Body</span></div>
                 <div class="appearance-box5">
+                    <button class="toggles" name="act_settings_body" type="action">y</button>
+                    <span name="attr_body"></span>
                     <textarea class="input-textarea" name="attr_body" title="@{body}"></textarea>
                 </div>
                 <div class="appearance-box6"><span class="label" data-i18n="clothing">Clothing</span></div>
                 <div class="appearance-box7">
+                    <button class="toggles" name="act_settings_clothing" type="action">y</button>
+                    <span name="attr_clothing"></span>
                     <textarea class="input-textarea" name="attr_clothing" title="@{clothing}"></textarea>
                 </div>
             </div>                    
@@ -362,10 +369,10 @@
                     <span class="header-h1" name="attr_current_preset"></span>
                 </div>
                 <div class="grid-item template-roll">
-                    <button class="dice-pool" type="roll" name="roll_the_dice" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{dice-pool}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} {{attribute-die-one=[[ @{attribute_die_one}]] }} {{attribute-roll-one=[[1d6]] }} {{attribute-die-two=[[ @{attribute_die_two}]] }} {{attribute-roll-two=[[1d6]] }} {{attribute-die-three=[[ @{attribute_die_three}]] }} {{attribute-roll-three=[[1d6]] }} {{attribute-die-four=[[ @{attribute_die_four}]] }} {{attribute-roll-four=[[1d6]] }} {{attribute-die-five=[[ @{attribute_die_five}]] }} {{attribute-roll-five=[[1d6]] }} {{attribute-die-six=[[ @{attribute_die_six}]] }} {{attribute-roll-six=[[1d6]] }} {{skill-die-one=[[ @{skill_die_one}]] }} {{skill-roll-one=[[1d6]] }} {{skill-die-two=[[ @{skill_die_two}]] }} {{skill-roll-two=[[1d6]] }} {{skill-die-three=[[ @{skill_die_three}]] }} {{skill-roll-three=[[1d6]] }} {{skill-die-four=[[ @{skill_die_four}]] }} {{skill-roll-four=[[1d6]] }} {{skill-die-five=[[ @{skill_die_five}]] }} {{skill-roll-five=[[1d6]] }} {{skill-die-six=[[ @{skill_die_six}]] }} {{skill-roll-six=[[1d6]] }} {{skill-die-seven=[[ @{skill_die_seven}]] }} {{skill-roll-seven=[[1d6]] }} {{negative-die-one=[[ @{negative_die_one}]] }} {{negative-roll-one=[[1d6]] }} {{negative-die-two=[[ @{negative_die_two}]] }} {{negative-roll-two=[[1d6]] }} {{negative-die-three=[[ @{negative_die_three}]] }} {{negative-roll-three=[[1d6]] }} {{gear-die-one=[[ @{gear_die_one}]] }} {{gear-roll-one=[[1d6]] }} {{gear-die-two=[[ @{gear_die_two}]] }} {{gear-roll-two=[[1d6]] }} {{gear-die-three=[[ @{gear_die_three}]] }} {{gear-roll-three=[[1d6]] }} {{gear-die-four=[[ @{gear_die_four}]] }} {{gear-roll-four=[[1d6]] }} {{gear-die-five=[[ @{gear_die_five}]] }} {{gear-roll-five=[[1d6]] }} {{gear-die-six=[[ @{gear_die_six}]] }} {{gear-roll-six=[[1d6]] }} {{gear-die-seven=[[ @{gear_die_seven}]] }} {{gear-roll-seven=[[1d6]] }} {{gear-die-eight=[[ @{gear_die_eight}]] }} {{gear-roll-eight=[[1d6]] }} {{gear-die-nine=[[ @{gear_die_nine}]] }} {{gear-roll-nine=[[1d6]] }} {{gear-die-ten=[[ @{gear_die_ten}]] }} {{gear-roll-ten=[[1d6]] }} {{gear-die-eleven=[[ @{gear_die_eleven}]] }} {{gear-roll-eleven=[[1d6]] }} {{gear-die-twelve=[[ @{gear_die_twelve}]] }} {{gear-roll-twelve=[[1d6]] }} {{artifact-die-eight=[[ @{artifact_die_eight}]] }} {{artifact-roll-eight=[[1d8]] }} {{artifact-die-ocho=[[ @{artifact_die_ocho}]] }} {{artifact-roll-ocho=[[1d8]] }} {{artifact-die-ten=[[ @{artifact_die_ten}]] }} {{artifact-roll-ten=[[1d10]] }} {{artifact-die-twelve=[[ @{artifact_die_twelve}]] }} {{artifact-roll-twelve=[[1d12]] }} @{include_with_roll}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
+                    <button class="dice-pool" type="roll" name="roll_the_dice" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{dice-pool}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} {{attribute-die-one=[[ @{attribute_die_one}]] }} {{attribute-roll-one=[[1d6]] }} {{attribute-die-two=[[ @{attribute_die_two}]] }} {{attribute-roll-two=[[1d6]] }} {{attribute-die-three=[[ @{attribute_die_three}]] }} {{attribute-roll-three=[[1d6]] }} {{attribute-die-four=[[ @{attribute_die_four}]] }} {{attribute-roll-four=[[1d6]] }} {{attribute-die-five=[[ @{attribute_die_five}]] }} {{attribute-roll-five=[[1d6]] }} {{attribute-die-six=[[ @{attribute_die_six}]] }} {{attribute-roll-six=[[1d6]] }} {{skill-die-one=[[ @{skill_die_one}]] }} {{skill-roll-one=[[1d6]] }} {{skill-die-two=[[ @{skill_die_two}]] }} {{skill-roll-two=[[1d6]] }} {{skill-die-three=[[ @{skill_die_three}]] }} {{skill-roll-three=[[1d6]] }} {{skill-die-four=[[ @{skill_die_four}]] }} {{skill-roll-four=[[1d6]] }} {{skill-die-five=[[ @{skill_die_five}]] }} {{skill-roll-five=[[1d6]] }} {{skill-die-six=[[ @{skill_die_six}]] }} {{skill-roll-six=[[1d6]] }} {{skill-die-seven=[[ @{skill_die_seven}]] }} {{skill-roll-seven=[[1d6]] }} {{negative-die-one=[[ @{negative_die_one}]] }} {{negative-roll-one=[[1d6]] }} {{negative-die-two=[[ @{negative_die_two}]] }} {{negative-roll-two=[[1d6]] }} {{negative-die-three=[[ @{negative_die_three}]] }} {{negative-roll-three=[[1d6]] }} {{gear-die-one=[[ @{gear_die_one}]] }} {{gear-roll-one=[[1d6]] }} {{gear-die-two=[[ @{gear_die_two}]] }} {{gear-roll-two=[[1d6]] }} {{gear-die-three=[[ @{gear_die_three}]] }} {{gear-roll-three=[[1d6]] }} {{gear-die-four=[[ @{gear_die_four}]] }} {{gear-roll-four=[[1d6]] }} {{gear-die-five=[[ @{gear_die_five}]] }} {{gear-roll-five=[[1d6]] }} {{gear-die-six=[[ @{gear_die_six}]] }} {{gear-roll-six=[[1d6]] }} {{gear-die-seven=[[ @{gear_die_seven}]] }} {{gear-roll-seven=[[1d6]] }} {{gear-die-eight=[[ @{gear_die_eight}]] }} {{gear-roll-eight=[[1d6]] }} {{gear-die-nine=[[ @{gear_die_nine}]] }} {{gear-roll-nine=[[1d6]] }} {{gear-die-ten=[[ @{gear_die_ten}]] }} {{gear-roll-ten=[[1d6]] }} {{gear-die-eleven=[[ @{gear_die_eleven}]] }} {{gear-roll-eleven=[[1d6]] }} {{gear-die-twelve=[[ @{gear_die_twelve}]] }} {{gear-roll-twelve=[[1d6]] }} @{include_with_roll}" data-i18n-title="roll-dice" title="Roll the Dice!"><span class="small-caps" data-i18n="roll"> Roll </span></button>
                 </div>
                 <div class="grid-item template-roll">
-                    <button class="dice-pool" type="roll" name="roll_a_push" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pushes-the-roll}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} {{attribute-die-one=[[ @{attribute_die_one}]] }} {{attribute-roll-one=[[1d6]] }} {{attribute-die-two=[[ @{attribute_die_two}]] }} {{attribute-roll-two=[[1d6]] }} {{attribute-die-three=[[ @{attribute_die_three}]] }} {{attribute-roll-three=[[1d6]] }} {{attribute-die-four=[[ @{attribute_die_four}]] }} {{attribute-roll-four=[[1d6]] }} {{attribute-die-five=[[ @{attribute_die_five}]] }} {{attribute-roll-five=[[1d6]] }} {{attribute-die-six=[[ @{attribute_die_six}]] }} {{attribute-roll-six=[[1d6]] }} {{skill-die-one=[[ @{skill_die_one}]] }} {{skill-roll-one=[[1d6]] }} {{skill-die-two=[[ @{skill_die_two}]] }} {{skill-roll-two=[[1d6]] }} {{skill-die-three=[[ @{skill_die_three}]] }} {{skill-roll-three=[[1d6]] }} {{skill-die-four=[[ @{skill_die_four}]] }} {{skill-roll-four=[[1d6]] }} {{skill-die-five=[[ @{skill_die_five}]] }} {{skill-roll-five=[[1d6]] }} {{skill-die-six=[[ @{skill_die_six}]] }} {{skill-roll-six=[[1d6]] }} {{skill-die-seven=[[ @{skill_die_seven}]] }} {{skill-roll-seven=[[1d6]] }} {{negative-die-one=[[ @{negative_die_one}]] }} {{negative-roll-one=[[1d6]] }} {{negative-die-two=[[ @{negative_die_two}]] }} {{negative-roll-two=[[1d6]] }} {{negative-die-three=[[ @{negative_die_three}]] }} {{negative-roll-three=[[1d6]] }} {{gear-die-one=[[ @{gear_die_one}]] }} {{gear-roll-one=[[1d6]] }} {{gear-die-two=[[ @{gear_die_two}]] }} {{gear-roll-two=[[1d6]] }} {{gear-die-three=[[ @{gear_die_three}]] }} {{gear-roll-three=[[1d6]] }} {{gear-die-four=[[ @{gear_die_four}]] }} {{gear-roll-four=[[1d6]] }} {{gear-die-five=[[ @{gear_die_five}]] }} {{gear-roll-five=[[1d6]] }} {{gear-die-six=[[ @{gear_die_six}]] }} {{gear-roll-six=[[1d6]] }} {{gear-die-seven=[[ @{gear_die_seven}]] }} {{gear-roll-seven=[[1d6]] }} {{gear-die-eight=[[ @{gear_die_eight}]] }} {{gear-roll-eight=[[1d6]] }} {{gear-die-nine=[[ @{gear_die_nine}]] }} {{gear-roll-nine=[[1d6]] }} {{gear-die-ten=[[ @{gear_die_ten}]] }} {{gear-roll-ten=[[1d6]] }} {{gear-die-eleven=[[ @{gear_die_eleven}]] }} {{gear-roll-eleven=[[1d6]] }} {{gear-die-twelve=[[ @{gear_die_twelve}]] }} {{gear-roll-twelve=[[1d6]] }} {{artifact-die-eight=[[ @{artifact_die_eight}]] }} {{artifact-roll-eight=[[1d8]] }} {{artifact-die-ocho=[[ @{artifact_die_ocho}]] }} {{artifact-roll-ocho=[[1d8]] }} {{artifact-die-ten=[[ @{artifact_die_ten}]] }} {{artifact-roll-ten=[[1d10]] }} {{artifact-die-twelve=[[ @{artifact_die_twelve}]] }} {{artifact-roll-twelve=[[1d12]] }} {{push-query=?{Did You Adjust the Dice Pool?|Yes ~ Of Course I Did.,The Pool of Dice was Adjusted.|No ~ I didn't ~ I need to Cancel this Roll.,The Pool of Dice was Not Adjusted.} }} @{include_with_roll}" data-i18n-title="push-dice" title="Push the Dice!"><span class="small-caps" data-i18n="push"> Push </span></button>
+                    <button class="dice-pool" type="roll" name="roll_a_push" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{pushes-the-roll}}} {{subtitle=@{current_preset}}} {{free-text}} {{footer}} {{attribute-die-one=[[ @{attribute_die_one}]] }} {{attribute-roll-one=[[1d6]] }} {{attribute-die-two=[[ @{attribute_die_two}]] }} {{attribute-roll-two=[[1d6]] }} {{attribute-die-three=[[ @{attribute_die_three}]] }} {{attribute-roll-three=[[1d6]] }} {{attribute-die-four=[[ @{attribute_die_four}]] }} {{attribute-roll-four=[[1d6]] }} {{attribute-die-five=[[ @{attribute_die_five}]] }} {{attribute-roll-five=[[1d6]] }} {{attribute-die-six=[[ @{attribute_die_six}]] }} {{attribute-roll-six=[[1d6]] }} {{skill-die-one=[[ @{skill_die_one}]] }} {{skill-roll-one=[[1d6]] }} {{skill-die-two=[[ @{skill_die_two}]] }} {{skill-roll-two=[[1d6]] }} {{skill-die-three=[[ @{skill_die_three}]] }} {{skill-roll-three=[[1d6]] }} {{skill-die-four=[[ @{skill_die_four}]] }} {{skill-roll-four=[[1d6]] }} {{skill-die-five=[[ @{skill_die_five}]] }} {{skill-roll-five=[[1d6]] }} {{skill-die-six=[[ @{skill_die_six}]] }} {{skill-roll-six=[[1d6]] }} {{skill-die-seven=[[ @{skill_die_seven}]] }} {{skill-roll-seven=[[1d6]] }} {{negative-die-one=[[ @{negative_die_one}]] }} {{negative-roll-one=[[1d6]] }} {{negative-die-two=[[ @{negative_die_two}]] }} {{negative-roll-two=[[1d6]] }} {{negative-die-three=[[ @{negative_die_three}]] }} {{negative-roll-three=[[1d6]] }} {{gear-die-one=[[ @{gear_die_one}]] }} {{gear-roll-one=[[1d6]] }} {{gear-die-two=[[ @{gear_die_two}]] }} {{gear-roll-two=[[1d6]] }} {{gear-die-three=[[ @{gear_die_three}]] }} {{gear-roll-three=[[1d6]] }} {{gear-die-four=[[ @{gear_die_four}]] }} {{gear-roll-four=[[1d6]] }} {{gear-die-five=[[ @{gear_die_five}]] }} {{gear-roll-five=[[1d6]] }} {{gear-die-six=[[ @{gear_die_six}]] }} {{gear-roll-six=[[1d6]] }} {{gear-die-seven=[[ @{gear_die_seven}]] }} {{gear-roll-seven=[[1d6]] }} {{gear-die-eight=[[ @{gear_die_eight}]] }} {{gear-roll-eight=[[1d6]] }} {{gear-die-nine=[[ @{gear_die_nine}]] }} {{gear-roll-nine=[[1d6]] }} {{gear-die-ten=[[ @{gear_die_ten}]] }} {{gear-roll-ten=[[1d6]] }} {{gear-die-eleven=[[ @{gear_die_eleven}]] }} {{gear-roll-eleven=[[1d6]] }} {{gear-die-twelve=[[ @{gear_die_twelve}]] }} {{gear-roll-twelve=[[1d6]] }}{{push-query=?{Did You Adjust the Dice Pool?|Yes ~ Of Course I Did.,The Pool of Dice was Adjusted.|No ~ I didn't ~ I need to Cancel this Roll.,The Pool of Dice was Not Adjusted.} }} @{include_with_roll}" data-i18n-title="push-dice" title="Push the Dice!"><span class="small-caps" data-i18n="push"> Push </span></button>
                 </div>
                 <div class="grid-item">
                     <button class="dice-pool" type="roll" name="roll_d66" value="&{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=D66 Roll}} {{subtitle}} {{free-text}}  {{skill-die-one=[[ 1 ]] }} {{skill-roll-one=[[ 1d6 ]] }} {{skill-die-two=[[ 1 ]] }} {{skill-roll-two=[[ 1d6 ]] }} {{footer}}" data-i18n-title="roll-dice-66" title="Roll d66!"><span class="small-caps"> D</span>66 </button>
@@ -418,10 +425,17 @@
                 </div>
                 <div class="talents-box4">
                     <fieldset class="repeating_mutantions">
-                        <div class="talents-grid">
-                            <input class="expand" type="checkbox" name="attr_expand" data-i18n-title="show-hide" title="show/hide" /><span></span>
-                            <input class="talents-box1 input" type="text" name="attr_mutant_name" value="" title="@{repeating_talents_$X_mutant_name}" placeholder="Name" />
-                            <textarea class="talents-box4 input-textarea" name="attr_mutant_description" title="@{repeating_talents_$X_mutant_description}" placeholder="description"></textarea>
+                        <input class="display" name="attr_reveal" type="hidden" value="display,settings,collapse," />
+                        <div class="mutantions-grid">
+                            <button class="toggles" name="act_settings" type="action">y</button>
+                            <button class="collapse" name="act_collapse" type="action">
+                                <span name="attr_mutantion_name" title="Mutant Power name"></span>
+                            </button>
+                             <span class="collapsible" name="attr_mutantion_description"></span>
+                        </div>
+                        <div class="mutantions-grid settings">
+                            <input class="talents-box1 input" type="text" name="attr_mutantion_name" value="" title="@{repeating_mutantions_$X_mutantion_name}" placeholder="Name" />
+                            <textarea class="talents-box4 input-textarea" name="attr_mutantion_description" title="@{repeating_mutantions_$X_mutantion_description}" placeholder="description"></textarea>
                         </div>
                     </fieldset>                    
                 </div>
@@ -1482,20 +1496,47 @@ on("change:armor1_equiped change:armor1_damage change:armor1_bonus change:armor2
     });
     
    //toggle off and on show settings for injuries
-   [`repeating_injuries:settings`, `repeating_talents:settings`, `repeating_talents:collapse`].forEach((attr) => {
+   [`repeating_injuries:settings`, `repeating_talents:settings`, `repeating_talents:collapse`, "repeating_mutantions:settings", "repeating_mutantions:collapse"].forEach((attr) => {
         on(`clicked:${attr}`, (eventinfo) => {
-            const word = eventinfo.sourceAttribute.split("_")[3];
-            const reveal = eventinfo.sourceAttribute.replace(word, "reveal");
-            let update = {};
-            getAttrs([reveal], (v) => {
+            const word    = eventinfo.sourceAttribute.split("_")[3];
+            const reveal  = eventinfo.sourceAttribute.replace(word, "reveal");
+            const keyword = attr.split(":")[1];
+            settingsToggles(reveal, keyword);
+            //let update = {};
+   /*         getAttrs([reveal], (v) => {
                 const keyword = attr.split(":")[1];
                 let string = v[`${reveal}`];
                 update[reveal] = (string.includes(`${keyword}`)) ? string.replace(`${keyword},`, "") : string += `${keyword},`;
                 console.log(`%c Was ${v[`${reveal}`]}; Update  ${JSON.stringify(update)}`,"color:blue;font-size:15px;");
                 setAttributes(update, true);
-            });
+            }); */
         }); 
    });
+
+   //Hide & show settings for appearance
+      [`face`,`body`,`clothing`].forEach((attr) => {
+        on(`clicked:settings_${attr}`, (eventinfo) => {;
+            const reveal = "appearence_reveal";
+            settingsToggles(reveal, attr);
+    /*        let update = {};
+            getAttrs([reveal], (v) => {
+                let string = v[`${reveal}`];
+                update[reveal] = (string.includes(`${attr}`)) ? string.replace(`${attr},`, "") : string += `${attr},`;
+                console.log(`%c Was ${v[`${reveal}`]}; Update  ${JSON.stringify(update)}`,"color:blue;font-size:15px;");
+                setAttributes(update, true);
+            });*/
+        }); 
+   });
+
+    const settingsToggles = (reveal, keyword) => {
+        let update = {};
+        getAttrs([reveal], (v) => {
+            let string = v[`${reveal}`];
+            update[reveal] = (string.includes(`${keyword}`)) ? string.replace(`${keyword},`, "") : string += `${keyword},`;
+            console.log(`%c Was ${v[`${reveal}`]}; Update  ${JSON.stringify(update)}`,"color:blue;font-size:15px;");
+            setAttributes(update, true);
+        });
+    };
 
 
     //Notes toggles
