--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -23,6 +23,10 @@
 	                <li>Added button links to GURPS Wiki and Forum Thread</li>
 	                <li>Skills Tab. Added Wildcard! Skill level option</li>
 	                <li>Roll Results. Refactored logic to show text and handle critical rolls better.</li>
+	                <li>
+            	        Added correct names to the new roll buttons. That way, if you drag the button to the macro quick bar, then a useful name will show. 
+            	        For example; drag the die for Fright to the quick macro bar and it will be called {name}: vsFright
+            	    </li>
 	            </ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -388,7 +392,7 @@
 						&nbsp;
 					</div>
 					<div class="sheet-cell sheet-col4">
-						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Unstun Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{stun_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{notes=If failed, must Do Nothing. \n<br />-4 to defenses, no retreat.\n<br />Roll per turn to recover.}}"  name="roll_vsKnockdown" />
+						<button type="roll" value="@{roll}&{template:skillRoll} {{type=Condition Check}} {{showSuccessLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=Unstun Check}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{stun_check} + @{modifier}]]}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{notes=If failed, must Do Nothing. \n<br />-4 to defenses, no retreat.\n<br />Roll per turn to recover.}}"  name="roll_vsUnstun" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-sub-row sheet-row-condition-knockdown">
@@ -3582,7 +3586,7 @@
 
 	<div>
 
-	<h3>Latest Changes: Updated 4/30/2019</h3>
+	<h3>Latest Changes: Updated 6/4/2019</h3>
 		
 	<h3>Known Issues</h3>
 	<ul>
@@ -3618,7 +3622,11 @@
 	<ul>
         <li>Added button links to GURPS Wiki and Forum Thread</li>   
         <li>Skills Tab. Added Wildcard! Skill level option</li>
-	    <li>Roll Results. Refactored logic to show text and handle critical rolls better.</li>
+	    <li>Roll Results. Refactored logic to show text for hit/miss or success/fail, and handle critical rolls better.</li>
+	    <li>
+	        Added names to a few roll buttons. if you drag the button to the macro quick bar, then a useful name will show. 
+	        For example; drag the die for ST to the quick macro bar and it will be called ST Roll
+	    </li>
 	</ul>
 	            
 	<h4>Version: 1.5.7</h4>
